@@ -1,13 +1,14 @@
 DIST gentoo-headers-2.6.23-5.tar.bz2 8185 RMD160 5c2bb6deb7ab7c2180cc4395d8a56f2ad92b32ed SHA1 d015ce4f8ca1a36b8602f2c5da56da60585815d2 SHA256 108499f4b07d1bb6c4dc6930ba0c7d48499a6dfa2bd2f7d9661b84a7a4f339e9
 DIST gentoo-headers-2.6.27-2.tar.lzma 8548 RMD160 48c5b98a12a9830be7cfcc5f993807b51c6c5434 SHA1 d9052b14536693cd63b415a0f040ab1832801be9 SHA256 a6dcb5cd6e652d4b09a91ce1bba02ab8a9c4faf3341f0ea0295d9048063aa3be
-DIST gentoo-headers-2.6.28-1.tar.lzma 9971 RMD160 3497417776606c2f662c4f65342f6652ef62aadc SHA1 03e679f9c77dda33dc82143fcde8087e212212c3 SHA256 80761b4eb0c3a9ca6d4d145b9851acd436b067edc991c58fedd3c2e9a47c1be2
 DIST gentoo-headers-2.6.28-2.tar.lzma 10175 RMD160 47e9cbd88265269b4b7f8ac35c19879b1e1dab07 SHA1 3895ce0fbd60a9f9720ee7cfeb769dbe2387e973 SHA256 03a06f9918eb4836a147a04d6d1f4728bf8f7a23e00ef28ef9396601303cc5c6
+DIST gentoo-headers-2.6.29-1.tar.lzma 9640 RMD160 2b13edcd80d1772c7e438678d20dd0b752b43832 SHA1 865b95ef6c87ac734c502a7519d30790f3a106bf SHA256 73f66116a67fc8fe28de407456dbfa0532929c5f2e8b8508fcb5b452875de3d8
 DIST gentoo-headers-base-2.6.23.tar.bz2 4774654 RMD160 506b3cdad53025783fe7f9b30c9150828bdf53e9 SHA1 a00fe87cd741fd04ce49678da41341baa0b0e4cf SHA256 5bb816dceba5b6cb4829b25eb1e06af3c00b5a9f8eca1d6e711965d5020b78ab
 DIST gentoo-headers-base-2.6.27.tar.lzma 3584132 RMD160 824b540cfa897b6b63a22bc3179f29b15c66d835 SHA1 05d7e26b4bc0cf80481f289e8263834b202ec573 SHA256 c86343d77613555760871838608bdf08429e48f96e261039e206de4411546437
 DIST gentoo-headers-base-2.6.28.tar.lzma 3698033 RMD160 d37901dff6334482b582d843a4d293ce99d6d64c SHA1 1a12e7c2b71091f90c6af46f70a8393fb399b9cc SHA256 fc1d07a2a37a290589d71b2b48e1c5660b89a958d578d9fb5be8cbcc59fbfcd2
+DIST gentoo-headers-base-2.6.29.tar.lzma 3814923 RMD160 7b70d699c7ebbd0a59ecc27da7087be65de60c68 SHA1 30896450246761f6ee9ed89a16249b7b5b314da4 SHA256 b33b53075afdeb92e3e85d404d9b4d9e55e6665603cd58a0d42e1b3db4d52ab5
 EBUILD linux-headers-2.6.23-r3.ebuild 1040 RMD160 8a90cce5429256596402240c6588d486d62947ea SHA1 5f03e0c2ac763f51e61e807139945de3b3d9edc5 SHA256 761c2bdb6fbc52f9e6f217b6062da9b64bcb4e5c6474195de3d8be5f7af9822c
-EBUILD linux-headers-2.6.27-r2.ebuild 1291 RMD160 87c99b902e56370f668bf0864d3471821f289de3 SHA1 71fbf0246cf2b9bed680357ad8f0853e924ec4d5 SHA256 ec3b215b61a93d4b575c62c9cbda26a5e8d33092c61ef7dc01bc4d963e3b99e1
-EBUILD linux-headers-2.6.28-r1.ebuild 1367 RMD160 c458d61b31d7a5ab1062682fcd8a3ac8bb09cec6 SHA1 79bcd5be502978c2a788bafaee033f1918482939 SHA256 7a2fcf6b56e14a14c4524c2126a14cd424ad20dc7d23d38cfb5a8b4c170f9ce3
-EBUILD linux-headers-2.6.28.ebuild 1290 RMD160 44f4514c75511897d9888b1069af6c545bdfa007 SHA1 889c0d894f536eefe2ac9d07ee0ff4902064ec76 SHA256 fdc3745bd79ec9772abdc832659de233b4fa2cbb2fe37f29b996f874a2bb21bf
-MISC ChangeLog 48776 RMD160 03d2f25a5e5ee1ceab772f81335da3bf52cea8fe SHA1 3540756f34a8c082848b735faa7fc01b3f5a9c65 SHA256 5b7ad4ac780102cc0f06e9d9e387001639a8d9e799d883beccdd757a2400dd30
+EBUILD linux-headers-2.6.27-r2.ebuild 1303 RMD160 cd1a2b9f0be66ef9cc5f5015979e12f89cda8d0d SHA1 275a5413dfe722b515024f97a5dcdc853a162260 SHA256 2037d3b8b334d3a83cdddca166220b05f0ebb6724ec870c22dc37747015dcdb8
+EBUILD linux-headers-2.6.28-r1.ebuild 1380 RMD160 2a7ebd745064757618cf21e82f09a6e8876b8c22 SHA1 3a06b08461a0e6382022476769db340dc9a67304 SHA256 0b53b1eb078eefd5dde5502b913d648baf840d30af0c56cd406894ae74432de8
+EBUILD linux-headers-2.6.29.ebuild 1377 RMD160 31a868bc03a97be28eed0ac37f1e5175e7447329 SHA1 2256b266223f9a2dbc3ad3a556426611b3dbc4a0 SHA256 739c88466667fa2e2f9e8e063af3f94f3c33dfe8d6ec5a63ae3e640af3987ec1
+MISC ChangeLog 49103 RMD160 e3e9498eba174f870d4049bed58982e5a5c0675d SHA1 633404c747487f84cf3acb7d3658729999e55d1c SHA256 6ac5d8a6ca6d879886f87a2d7b614577b37d6aeb4df8336e8c55a06c7d2f086c
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
