@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/linux-headers-2.6.28-r1.ebuild,v 1.2 2009/02/16 05:12:24 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/linux-headers-2.6.28-r1.ebuild,v 1.3 2009/05/09 20:48:50 vapier Exp $
 
 ETYPE="headers"
 H_SUPPORTEDARCH="alpha amd64 arm cris hppa m68k mips ia64 ppc ppc64 s390 sh sparc x86"
@@ -42,7 +42,7 @@ src_install() {
 	find "${ED}" '(' -name '.install' -o -name '*.cmd' ')' -print0 | xargs -0 rm -f
 
 	# provided by libdrm (for now?)
-	rm -rf "${ED}"/usr/include/drm
+	rm -rf "${ED}"/$(kernel_header_destdir)/drm
 }
 
 src_test() {
