@@ -1,6 +1,16 @@
 # ChangeLog for sys-kernel/linux-headers
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.285 2009/02/16 05:12:24 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.287 2009/05/09 22:02:40 vapier Exp $
+
+*linux-headers-2.6.29 (09 May 2009)
+
+  09 May 2009; Mike Frysinger <vapier@gentoo.org>
+  +linux-headers-2.6.29.ebuild:
+  Version bump.
+
+  09 May 2009; Mike Frysinger <vapier@gentoo.org>
+  linux-headers-2.6.27-r2.ebuild, linux-headers-2.6.28-r1.ebuild:
+  Fix by Andrei Slavoiu for drm header install with cross builds #267145.
 
   16 Feb 2009; Mike Frysinger <vapier@gentoo.org>
   linux-headers-2.6.28-r1.ebuild:
